# queue-macros

./: CMakeLists.txt  Dockerfile  README.md  STYLE-GUIDE.md
.cubit/: KANBAN-BACKLOG.md  KANBAN-COMPLETED.md  KANBAN-CURRENT.md  TASK-CARD-TEMPLATE.md
.cubit/tasks/: TASK-TEMPLATE.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
.tabernacle/: AI-PERSONA.md  BOOTSTRAP-GUIDE.md  CLI-BOOTSTRAP.md  DEVELOPER-PERSONA.md  HANDOFF-TEMPLATE.md  NOTES.md  PROJECT-OVERVIEW.md  WEB-BOOTSTRAP.md
include/: queue_macros.h
tests/: CMakeLists.txt  int_queue.c  int_queue.h  main.c
tests/int-queue-tests/: CMakeLists.txt  int_queue.c  int_queue.h  test_int_queue.c
